# cmake_example_c

./: .gitignore  CMakeLists.txt  README.md
include/: helloworld.h
src/: helloworld.c  main.c
